nginx-backend2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-2
  labels:
    run: my-nginx-2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: my-nginx-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-2
spec:
  selector:
    matchLabels:
      run: my-nginx-2
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx-2
    spec:
      containers:
      - name: my-nginx-2
        image: nginx
        ports:
        - containerPort: 80
