ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
   # ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - 34.74.102.60     #IP externa del Load Balancer del servicio nginx-ingress
      secretName: nginx-ingress-secret
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: my-nginx
          servicePort: 80
      - path: /v2
        backend:
          serviceName: my-nginx-2
          servicePort: 80
